k8s/src/resources/shlink/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shlink-svc
spec:
  ports:
    - name: 80-tcp
      port: 80
      targetPort: 8080
