k8s/src/resources/shlink/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: shlink.${NETWORK_HOSTNAME_SUFFIX}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: shlink-svc
                port:
                  name: 80-tcp
    - host: $SHLINK_DEFAULT_DOMAIN
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: shlink-svc
                port:
                  name: 80-tcp
  tls:
    - secretName: shlink-tls
      hosts:
        - shlink.${NETWORK_HOSTNAME_SUFFIX}
        - $SHLINK_DEFAULT_DOMAIN
